Wyrd ChangeLog
--------------------------------------------------------------------------------

2005-09-13     The untimed reminders window now accepts focus even when
               there are no untimed reminders.

               Executing the 'edit' command on a blank timeslot now creates a
               new timed reminder.  Hitting 'edit' on a blank untimed reminders
               list creates a new untimed reminder.
               
               Added support for 'nodisplay' and 'noweight' TAG parameters,
               which can be used to suppress display of reminders or give
               them no weight when determining the "busy level" colorations
               on the month calendar.

               Removed nonsensical DURATION specifiers from default weekly and 
               monthly untimed reminder templates.
               
               Added the 'center_cursor' option, which can be used to fix the 
               cursor in the center of the timed reminders window while 
               scrolling.

2005-09-12     Fixed an assertion failure caused by entering an unprintable
               character in a search string.

2005-06-23     Released 1.0.0.

2005-06-22     Added a screen refresh function.

2005-06-21     Implemented overlapping timed reminders and associated routines 
               for handling multiple reminders in a single timeslot.
               Colorable object 'timed_reminder' has been deprecated in
               favor of 'timed_reminder1' through 'timed_reminder4', so
               that overlapping reminders can be given different colors.

2005-06-20     Corrected the disappearing cursor bug associated with jumping
               between days with differing numbers of untimed reminders.

2005-05-04     Released 0.3.0.

               Converted the documentation to LaTeX format, with PDF, HTML,
               and manpage targets.

               Added "new_*_dialog" commands for creating new reminders.  These